# hello-poetry2nix

./: .envrc  README.md  pyproject.toml  shell.nix
hello_poetry2nix/: __init__.py
